# primes

./: .gitignore  CMakeLists.txt  main.cpp  primes  primes.cbp  primetest.cpp  primetest.h
